--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ header {
   padding: 32px 0 0 0;
   border-bottom: 2px solid #2d2f36;
   box-shadow: 0 2px 10px #18192160;
-  position: relative; /* make header a positioning context for the logo */
+  position: relative;
 }
 
 .navbar {
