--- a/styles.css
+++ b/styles.css
@@ -44,8 +44,7 @@ section {
 footer {
   padding: 14px 0;
   text-align: center;
-  background: #00337F;
-  color: #FFFFFF;
+  color: #00337F;
   font-size: .93rem;
   border-top: none;
   margin-top: 0px;
